--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
                 <div class='col-md-3 sidebar'>
                     <div ng-include="'/templates/main/left-sidebar.html'"></div>
                 </div>
-                <div class='col-md-6' ng-view></div>
+                <div id='main-content' class='col-md-6' ng-view></div>
                 <div class='col-md-3 sidebar'>
                     <div ng-include="'/templates/main/right-sidebar.html'"></div>
                 </div>
@@ -27,11 +27,13 @@
         <script type="text/javascript" src="/libs/angular.js"></script>
         <script type="text/javascript" src="/libs/angular-route.js"></script>
         <script type="text/javascript" src="/libs/angular-resource.js"></script>
+        <script type="text/javascript" src="/libs/angular-local-storage.js"></script>
         <script type="text/javascript" src="/libs/jquery-2.1.3.js"></script>
         <script type="text/javascript" src="/libs/jquery.noty.js"></script>
         <script type="text/javascript" src="/libs/bootstrap-3.1.1.js"></script>
         <script type="text/javascript" src="/js/app.js"></script>
         <script type="text/javascript" src="/js/controllers/HomeController.js"></script>
+        <script type="text/javascript" src="/js/controllers/BlankController.js"></script>
         <script type="text/javascript" src="/js/services/adsService.js"></script>
     </body>
 </html>
