--- a/index.html
+++ b/index.html
@@ -33,7 +33,10 @@
         <script type="text/javascript" src="/libs/bootstrap-3.1.1.js"></script>
         <script type="text/javascript" src="/js/app.js"></script>
         <script type="text/javascript" src="/js/controllers/HomeController.js"></script>
+        <script type="text/javascript" src="/js/controllers/LoginController.js"></script>
         <script type="text/javascript" src="/js/controllers/BlankController.js"></script>
         <script type="text/javascript" src="/js/services/adsService.js"></script>
+        <script type="text/javascript" src="/js/services/authenticationService.js"></script>
+        <script type="text/javascript" src="/js/services/userService.js"></script>
     </body>
 </html>
