--- a/index.html
+++ b/index.html
@@ -31,7 +31,9 @@
         <script type="text/javascript" src="/js/app.js"></script>
         <script type="text/javascript" src="/js/controllers/HomeController.js"></script>
         <script type="text/javascript" src="/js/controllers/LoginController.js"></script>
+        <script type="text/javascript" src="/js/controllers/RegisterController.js"></script>
         <script type="text/javascript" src="/js/controllers/BlankController.js"></script>
+        <script src="js/services/data/townsService.js" type="text/javascript"></script>
         <script type="text/javascript" src="/js/services/adsService.js"></script>
         <script type="text/javascript" src="/js/services/authenticationService.js"></script>
         <script type="text/javascript" src="/js/services/userService.js"></script>
