--- a/index.html
+++ b/index.html
@@ -30,13 +30,15 @@
         <script type="text/javascript" src="/libs/bootstrap-3.1.1.js"></script>
         <script type="text/javascript" src="/js/app.js"></script>
         <script type="text/javascript" src="/js/controllers/HomeController.js"></script>
+        <script type="text/javascript" src="/js/controllers/MyAdsController.js"></script>
         <script type="text/javascript" src="/js/controllers/LoginController.js"></script>
         <script type="text/javascript" src="/js/controllers/RegisterController.js"></script>
         <script type="text/javascript" src="/js/controllers/BlankController.js"></script>
-        <script src="js/services/data/townsService.js" type="text/javascript"></script>
+        <script type="text/javascript" src="js/services/data/townsService.js"></script>
         <script type="text/javascript" src="/js/services/adsService.js"></script>
+        <script type="text/javascript" src="/js/services/userAdsService.js"></script>
         <script type="text/javascript" src="/js/services/authenticationService.js"></script>
         <script type="text/javascript" src="/js/services/userService.js"></script>
-        <script src="js/directives/sidebar.js" type="text/javascript"></script>
+        <script type="text/javascript" src="js/directives/sidebar.js"></script>
     </body>
 </html>
