Login/Logout - DONE!

--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
         <script type="text/javascript" src="/js/controllers/HomeController.js"></script>
         <script type="text/javascript" src="/js/controllers/MyAdsController.js"></script>
         <script type="text/javascript" src="/js/controllers/LoginController.js"></script>
+        <script type="text/javascript" src="/js/controllers/LogoutController.js"></script>
         <script type="text/javascript" src="/js/controllers/RegisterController.js"></script>
         <script type="text/javascript" src="/js/controllers/BlankController.js"></script>
         <script type="text/javascript" src="js/services/data/townsService.js"></script>
