--- a/index.html
+++ b/index.html
@@ -32,9 +32,11 @@
         <script type="text/javascript" src="/js/controllers/HomeController.js"></script>
         <script type="text/javascript" src="/js/controllers/MyAdsController.js"></script>
         <script type="text/javascript" src="/js/controllers/LoginController.js"></script>
+        <script type="text/javascript" src="/js/controllers/PublishAdController.js"></script>
         <script type="text/javascript" src="/js/controllers/LogoutController.js"></script>
         <script type="text/javascript" src="/js/controllers/RegisterController.js"></script>
         <script type="text/javascript" src="/js/controllers/BlankController.js"></script>
+        <script type="text/javascript" src="js/services/data/categoriesService.js"></script>
         <script type="text/javascript" src="js/services/data/townsService.js"></script>
         <script type="text/javascript" src="/js/services/adsService.js"></script>
         <script type="text/javascript" src="/js/services/userAdsService.js"></script>
