Delete Ad, My Ads

--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
         <script type="text/javascript" src="/js/app.js"></script>
         <script type="text/javascript" src="/js/controllers/HomeController.js"></script>
         <script type="text/javascript" src="/js/controllers/MyAdsController.js"></script>
+        <script type="text/javascript" src="/js/controllers/DeleteAdController.js"></script>
         <script type="text/javascript" src="/js/controllers/LoginController.js"></script>
         <script type="text/javascript" src="/js/controllers/PublishAdController.js"></script>
         <script type="text/javascript" src="/js/controllers/LogoutController.js"></script>
