Page title added

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <body>
         <div class="container">
             <header id="app-header">
-                <div>Ads - _PAGE_</div>
+                <div>Ads - {{pageTitle}}</div>
             </header>
             <div id='app-content'>
                 <div class='col-md-3 sidebar'>
