--- a/index.html
+++ b/index.html
@@ -30,6 +30,8 @@
         <script type="text/javascript" src="/libs/bootstrap-3.1.1.js"></script>
         <script type="text/javascript" src="/js/app.js"></script>
         <script type="text/javascript" src="/js/controllers/HomeController.js"></script>
+        <script type="text/javascript" src="/js/controllers/TownController.js"></script>
+        <script type="text/javascript" src="/js/controllers/CategoryController.js"></script>
         <script type="text/javascript" src="/js/controllers/MyAdsController.js"></script>
         <script type="text/javascript" src="/js/controllers/DeleteAdController.js"></script>
         <script type="text/javascript" src="/js/controllers/LoginController.js"></script>
